kubernetes/resources/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: storage
spec:
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: storage
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["tail"]
      args: ["-f", "/dev/null"]
      securityContext:
        privileged: true
      volumeMounts:
        - mountPath: "/storage"
          name: storage
