kubernetes/resources/iperf3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: iperf3s 
  namespace: default
  labels:
    app: iperf3s
spec:
  containers:
    - name: iperf3
      image: networkstatic/iperf3
      command: ["tail"]
      args: ["-f", "/dev/null"]
      ports:
       - containerPort: 5201  
  nodeSelector:
    kubernetes.io/hostname: mx2
---
apiVersion: v1
kind: Service
metadata:
  name: iperf3s
  namespace: default
spec:
  selector:
    app: iperf3s
  ports:
    - name: tcp
      protocol: TCP
      port: 5201
      targetPort: 5201
---
apiVersion: v1
kind: Pod
metadata:
  name: iperf3c
  namespace: default  
spec:
  containers:
    - name: iperf3
      image: networkstatic/iperf3
      command: ["tail"]
      args: ["-f", "/dev/null"]
  nodeSelector:
    kubernetes.io/hostname: mx1
---
apiVersion: v1
kind: Service
metadata:
  name: iperf3s-ts
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: m1-ts
spec:
  selector:
    app: iperf3s
  loadBalancerIP: 100.111.164.99
  type: LoadBalancer
  ports:
    - name: tcp
      protocol: TCP
      port: 5201
      targetPort: 5201
