kubernetes/resources/arcane.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcane
  namespace: arcane
  labels:
    app: arcane
spec:
  selector:
    matchLabels:
      app: arcane
  template:
    metadata:
      labels:
        app: arcane
    spec:
      containers:
        - name: arcane
          image: ghcr.io/kzh/arcane-web:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: arcane
  namespace: arcane
spec:
  selector:
    app: arcane
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: arcane
  namespace: arcane
spec:
  parentRefs:
    - name: internal
      namespace: istio-system
  hostnames: ["arc.faust.dev"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: arcane
          port: 3000
