kubernetes/resources/crdb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cockroachdb-client-secure
  namespace: crdb
spec:
  serviceAccountName: cockroachdb
  containers:
    - name: cockroachdb-client-secure
      image: cockroachdb/cockroach:v22.2.2
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: client-certs
          mountPath: /cockroach/cockroach-certs/
      command:
        - sleep
        - "2147483648" # 2^31
  terminationGracePeriodSeconds: 0
  volumes:
    - name: client-certs
      projected:
        sources:
          - secret:
              name: cockroachdb-node
              items:
                - key: ca.crt
                  path: ca.crt
          - secret:
              name: cockroachdb-root
              items:
                - key: tls.crt
                  path: client.root.crt
                - key: tls.key
                  path: client.root.key
        defaultMode: 256
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: crdb
spec:
  host: cockroachdb-public
  trafficPolicy:
    tls:
      mode: SIMPLE
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: crdb
  namespace: crdb
spec:
  parentRefs:
    - name: internal
      namespace: istio-system
  hostnames: ["crdb.faust.dev"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cockroachdb-public
          port: 8080
