kubernetes/resources/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: https-redirect
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: web
      number: 80
      protocol: HTTP2
    hosts:
    - "*"
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: internal
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: mtls
    hosts:
    - "*.faust.dev"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  gateways:
  - istio-system/internal
  hosts:
  - "kiali.faust.dev"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 20001
        host: kiali
