kubernetes/resources/jaeger.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: tracing
spec:
  parentRefs:
    - name: internal
      namespace: istio-system
  hostnames: ["jaeger.faust.dev"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger-query
          port: 80
