kubernetes/resources/jellyfin.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jellyfin
  namespace: storage
spec:
  gateways:
  - istio-system/internal
  hosts:
  - "jellyfin.faust.dev"
  - "jf.faust.dev"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lb
  namespace: storage
spec:
  selector:
    app: jellyfin
  loadBalancerIP: 100.95.136.59
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3080
      targetPort: 8096
