kubernetes/resources/kubernetes-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: storage
spec:
  parentRefs:
    - name: internal
      namespace: istio-system
  hostnames: ["k8s.faust.dev"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard
          port: 9090
