kubernetes/resources/nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-ts
  namespace: storage
  annotations:
    metallb.universe.tf/allow-shared-ip: m1-ts
spec:
  type: LoadBalancer
  loadBalancerIP: 100.111.164.99
  selector:
    app: nextcloud
  ports:
  - protocol: TCP
    name: http
    port: 3080
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: storage
spec:
  parentRefs:
    - name: internal
      namespace: istio-system
  hostnames: ["nc.faust.dev"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 80
