kubernetes/resources/pong.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pong
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong
  namespace: pong
  labels:
    app: pong
spec:
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
      - name: pong
        image: docker.pkg.github.com/kzh/pong/pong:2.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pong
  namespace: pong
spec:
  selector:
    app: pong
  ports:
    - name: pong-http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: pong
  namespace: pong
spec:
  rules:
  - host: ping.kzh.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: pong
          servicePort: pong-http
  tls:
  - hosts:
    - ping.kzh.dev
    secretName: pong-cert
