kubernetes/resources/redpanda.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-external
  namespace: redpanda
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: redpanda-external
spec:
  ports:
    - name: admin
      port: 9644
      protocol: TCP
      targetPort: 9644
    - name: http
      port: 8082
      protocol: TCP
      targetPort: 8082
    - name: kafka
      port: 9093
      protocol: TCP
      targetPort: 9093
    - name: rpc
      port: 33145
      protocol: TCP
      targetPort: 33145
    - name: schemaregistry
      port: 8081
      protocol: TCP
      targetPort: 8081
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda
  namespace: redpanda
spec:
  defaultBackend:
    service:
      name: redpanda-console
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - redpanda
