kubernetes/resources/rook-dashboard.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  gateways:
  - istio-system/internal
  hosts:
  - "ceph.faust.dev"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 7000
        host: rook-ceph-mgr-dashboard
