kubernetes/resources/transmission.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: transmission
  namespace: storage
spec:
  gateways:
  - istio-system/internal
  hosts:
  - "tsm.faust.dev"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: tsm
