kubernetes/resources/vault.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  gateways:
  - istio-system/internal
  hosts:
  - "vault.faust.dev"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8200
        host: vault
